refactored buildMap #66